# chaoxing-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/api/: README.md  reference.md
examples/: download_first_video.py
src/chaoxing_downloader/: __init__.py  api.py  auth_init.py  cache_store.py  cli.py  config.py  course_catalog_parser.py  course_parser.py  http_client.py  media_resolver.py  models.py  session.py  state.py  workflow.py
tests/: test_api.py  test_auth_init.py  test_cli.py  test_config.py  test_course_catalog_parser.py  test_course_parser.py  test_end_to_end.py  test_http_client.py  test_media_resolver.py  test_real_payload_parser.py  test_session.py  test_workflow.py
tests/fixtures/: courselist_sample.html  studentcourse_sample.html  studentstudy_sample.html
