[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoxing-downloader"
version = "0.1.3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "DrissionPage>=4.1",
]

[project.scripts]
chaoxing-downloader = "chaoxing_downloader.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
